testsuite/tests/polykinds/T14561.stderr

T14561.hs:12:9: error:
    Cannot use function with representation-polymorphic arguments:
      unsafeCoerce# :: a -> a
    (Note that representation-polymorphic primops,
    such as 'coerce' and unboxed tuples, are eta-expanded
    internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Representation-polymorphic arguments: a :: TYPE r
